@@ -21,17 +21,15 @@ class InvoiceLine:
     __metaclass__ = PoolMeta
     __name__ = 'account.invoice.line'
 
-    gross_unit_price = fields.Numeric('Gross Price', digits=price_digits,
-        states=STATES, depends=DEPENDS)
-    gross_unit_price_wo_round = fields.Numeric('Gross Price without rounding',
-        digits=(16, price_digits[1] + discount_digits[1]), readonly=True)
+    gross_unit_price = fields.Function(fields.Numeric('Gross Price',
+            digits=price_digits, states=STATES, depends=DEPENDS),
+        'on_change_with_gross_unit_price', setter='set_gross_unit_price')
     discount = fields.Numeric('Discount', digits=discount_digits,
         states=STATES, depends=DEPENDS)
 
     @classmethod
     def __setup__(cls):
         super(InvoiceLine, cls).__setup__()
-        cls.unit_price.states['readonly'] = True
         cls.unit_price.digits = (20, price_digits[1] + discount_digits[1])
         if 'discount' not in cls.amount.on_change_with:
             cls.amount.on_change_with.add('discount')
@@ -42,72 +40,45 @@ class InvoiceLine:
     def default_discount():
         return Decimal(0)
 
-    def update_prices(self):
-        unit_price = self.unit_price
+    @fields.depends('gross_unit_price', 'unit_price', 'discount')
+    def on_change_with_gross_unit_price(self, name=None):
         digits = self.__class__.gross_unit_price.digits[1]
-        gross_unit_price = gross_unit_price_wo_round = self.gross_unit_price
+        if self.discount == Decimal(1):
+            return Decimal(0)
+        if self.unit_price:
+            discount = self.discount or Decimal(0)
+            gross_unit_price = self.unit_price / (1 - discount)
+            gross_unit_price = gross_unit_price.quantize(
+                Decimal(str(10.0 ** -digits)))
+            return gross_unit_price
+        # If no discount nor unit price return current_value or unit_price
+        return self.gross_unit_price or self.unit_price
 
-        if self.gross_unit_price is not None and self.discount is not None:
-            unit_price = self.gross_unit_price * (1 - self.discount)
+    @classmethod
+    def set_gross_unit_price(cls, lines, name, gross_unit_price):
+        for line in lines:
+            line.set_unit_price_from_gross_unit_price(gross_unit_price)
+        cls.save(lines)
+
+    def set_unit_price_from_gross_unit_price(self, gross_unit_price):
+        unit_price = self.unit_price
+        if gross_unit_price is not None and self.discount is not None:
+            unit_price = gross_unit_price * (1 - self.discount)
             digits = self.__class__.unit_price.digits[1]
             unit_price = unit_price.quantize(Decimal(str(10.0 ** -digits)))
-
-            if self.discount != 1:
-                gross_unit_price_wo_round = unit_price / (1 - self.discount)
-            gross_unit_price = gross_unit_price_wo_round.quantize(
-                Decimal(str(10.0 ** -digits)))
-        elif self.unit_price and self.discount:
-            gross_unit_price_wo_round = self.unit_price / (1 - self.discount)
-            gross_unit_price = gross_unit_price_wo_round.quantize(
-                Decimal(str(10.0 ** -digits)))
-
-        if gross_unit_price_wo_round:
-            digits = self.__class__.gross_unit_price_wo_round.digits[1]
-            gross_unit_price_wo_round = gross_unit_price_wo_round.quantize(
-                Decimal(str(10.0 ** -digits)))
-
-        self.gross_unit_price = gross_unit_price
-        self.gross_unit_price_wo_round = gross_unit_price_wo_round
-        self.unit_price = unit_price
+        # Ony trigger the change if it has really changed
+        if unit_price != self.unit_price:
+            self.unit_price = unit_price
 
     @fields.depends('gross_unit_price', 'discount', 'unit_price')
     def on_change_gross_unit_price(self):
-        return self.update_prices()
+        self.set_unit_price_from_gross_unit_price(self.gross_unit_price)
 
     @fields.depends('gross_unit_price', 'discount', 'unit_price')
     def on_change_discount(self):
-        return self.update_prices()
-
-    @fields.depends('gross_unit_price', 'unit_price', 'discount')
-    def on_change_product(self):
-        super(InvoiceLine, self).on_change_product()
-        if self.unit_price:
-            self.gross_unit_price = self.unit_price
-            self.discount = Decimal(0)
-            self.update_prices()
-        if not self.discount:
-            self.discount = Decimal(0)
-
-    @classmethod
-    def create(cls, vlist):
-        vlist = [x.copy() for x in vlist]
-        for vals in vlist:
-            if vals.get('type') != 'line':
-                continue
-            gross_unit_price = (vals.get('unit_price', Decimal('0.0'))
-                or Decimal('0.0'))
-            if vals.get('discount') not in (None, 1):
-                gross_unit_price = gross_unit_price / (1 - vals['discount'])
-            digits = cls.gross_unit_price.digits[1]
-            gross_unit_price = gross_unit_price.quantize(
-                Decimal(str(10.0 ** -digits)))
-            vals['gross_unit_price'] = gross_unit_price
-            if not vals.get('discount'):
-                vals['discount'] = Decimal(0)
-        return super(InvoiceLine, cls).create(vlist)
+        self.set_unit_price_from_gross_unit_price(self.gross_unit_price)
 
     def _credit(self):
         line = super(InvoiceLine, self)._credit()
-        for field in ('gross_unit_price', 'discount'):
-            setattr(line, field, getattr(self, field))
+        line.discount = self.discount
         return line
