@@ -1,3 +1,5 @@
+* Make gross_unit_price a functional field
+
 Version 4.2.0 - 2016-11-28
 * Bug fixes (see mercurial logs for details)
 
